<resources>
    <string name="app_name">Hobbies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="exit">Exit</string>
    <string name="hobbies">Hobbies</string>
    <string name="title_activity_hobby_interface">HobbyInterface</string>
    <string name="my_hobbies">My Hobbies</string>
    <string name="new_hobby">New Hobby</string>
    <string name="title_activity_add_hobby">AddHobby</string>
    <string name="add_hobby">Add Hobby</string>

    <string name="title_activity_hobbies">Hobbies</string>
    <string name="title_activity_edit_hobby">EditHobby</string>
    <string name="update">Update</string>
    <string name="title_activity_view_hobby">ViewHobby</string>
    <string name="edit_event">Edit Event</string>
    <string name="chart">Chart</string>
    <string name="edit_hobby">Edit Hobby</string>
    <string name="title_activity_chart">Chart</string>
    <string name="chart_desc">My Chart</string>
    <string name="hobby_name">Hobby Name</string>
    <string name="hours">Hours</string>
    <string name="delete_hobby">Delete Hobby</string>
</resources>
