<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_hobby_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hobby_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_hobby_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hours"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
    <Button
        android:id="@+id/deleteEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_hobby"/>
</LinearLayout>
